--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,4 +9,4 @@ file(GLOB_RECURSE SOURCES
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS "."
-    REQUIRES minmea driver oled esp_psram fatfs esp_timer esp_wifi esp_http_server)
+    REQUIRES minmea driver oled esp_psram fatfs esp_timer esp_wifi nvs_flash esp_http_server)
